# ANN

./: CMakeLists.txt
src/: dataset.cpp  layer.cpp  main.cpp  network.cpp  neuron.cpp
